--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,22 @@
 [package]
-name = "graph-app_rpc_transaction_endpoint"
+name = "starknet-tx-graph"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = { version = "0.5", features = ["json"] }
-reqwest = { version = "0.11", features = ["json"] }
+rocket = "0.5.0"
+rocket_contrib = "0.4.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
+starknet = "0.5.0"
+url = "2.3"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+anyhow = "1.0"
+thiserror = "1.0"
+uuid = { version = "1.3", features = ["v4"] }
+async-trait = "0.1"
+futures = "0.3"
 log = "0.4"
 env_logger = "0.10"
 dotenv = "0.15"
-url = "2.3"
-starknet = "0.13.0"
